[package]
name = "automon"
version = "0.1.0"
edition = "2021"

[features]
default = []
wayland = []
x11 = []

[lib]
name = "automon"

[[bin]]
name = "aumd"

[[bin]]
name = "aumc"

[dependencies]
anyhow = "1.0.100"
clap = "4.5.54"
config = "0.15.19"
env_logger = "0.10.2"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
displayz = "0.1.0"
tarpc = "0.37.0"
